--- a/guide/css/guide.css
+++ b/guide/css/guide.css
@@ -13,6 +13,9 @@ body {
 	padding: 0;
 	font-size: 16px;
 }
+body {
+	overflow: auto !important;
+}
 .hgroup {
 	position: relative;
 	display: flex;
