--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -590,6 +590,19 @@ template {
   top: 10px;
 }
 
+.pop-wrap.divide {
+  padding: 0 20px;
+  background: #f5f5f5;
+}
+
+.pop-wrap.divide > * {
+  padding: 20px 0;
+}
+
+.pop-wrap.divide > * + * {
+  border-top: 1px solid #ccc;
+}
+
 .list-box {
   position: relative;
   display: -webkit-box;
@@ -613,6 +626,83 @@ template {
 
 .list-box.gray-box .desc {
   color: #222;
+}
+
+.list-box.pop {
+  background: #f5f5f5;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-radius: 3px;
+}
+
+.list-box.pop.row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.list-box.pop .list-set {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.list-box.pop .list-set + .list-set {
+  margin-top: 0;
+  margin-left: 30px;
+}
+
+.list-box.pop .list-set.sm {
+  width: 258px;
+}
+
+.list-box.pop .label {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  color: #777;
+}
+
+.list-box.pop .label.sm {
+  min-width: 58px;
+}
+
+.list-box.pop .label.md {
+  min-width: 70px;
+}
+
+.list-box.pop .desc {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 100%;
+  color: #222;
+}
+
+.list-box.pop .badge {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  height: 20px;
+}
+
+.list-box.pop .k-button.bottom {
+  position: absolute;
+  bottom: 20px;
+  right: 0;
 }
 
 .list-box.half > * {
@@ -948,6 +1038,10 @@ button {
 
 .w100 {
   width: 100% !important;
+}
+
+.h100 {
+  height: 100% !important;
 }
 
 .text-full {
@@ -1393,6 +1487,7 @@ td .divide + .divide {
   font-size: 14px;
   font-weight: 400;
   line-height: 1;
+  letter-spacing: -0.75px;
 }
 
 .amount-set .amount.current {
@@ -2359,9 +2454,20 @@ td .divide + .divide {
 }
 
 .upload-box {
+  position: relative;
+  width: 100%;
   padding: 20px 30px;
   background-color: #f5f5f5;
   border: 1px solid #efefef;
+}
+
+.upload-box .close {
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  width: 18px;
+  height: 18px;
+  margin-top: -9px;
 }
 
 .upload {
@@ -2380,6 +2486,18 @@ td .divide + .divide {
   max-width: 89px;
   min-width: 89px;
   right: -97px;
+}
+
+.upload.type3 {
+  padding-right: 86px;
+}
+
+.upload.type3 .k-upload .k-upload-button {
+  max-width: 78px;
+  min-width: 78px;
+  right: -86px;
+  border: 1px solid #0e4194;
+  color: #0e4194;
 }
 
 .upload.md {
@@ -2611,6 +2729,30 @@ td .divide + .divide {
   margin-top: -10px;
 }
 
+.add-recipient-con {
+  width: 100%;
+}
+
+.add-recipient-pop {
+  position: relative;
+  margin-top: 10px;
+}
+
+.add-recipient-pop .close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.add-recipient-pop:not(:first-child) {
+  display: none;
+}
+
+/*
+* ------------------------------
+* Mobile Group
+* ------------------------------
+*/
 .mobile-group {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
@@ -2625,7 +2767,7 @@ td .divide + .divide {
 }
 
 .mobile-group > * + * {
-  max-width: calc(100% - 240px);
+  max-width: calc(100% - 250px);
 }
 
 .mobile-wrap {
@@ -5867,9 +6009,9 @@ th .required {
 
 .k-tabstrip-content.no-line.k-state-active,
 .k-tabstrip > .k-content.no-line.k-state-active {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -9591,6 +9733,10 @@ table.k-editor .k-editable-area {
   margin: 0;
 }
 
+table.k-editor {
+  height: 100% !important;
+}
+
 .selected-box {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -9602,8 +9748,24 @@ table.k-editor .k-editable-area {
   border-radius: 3px;
 }
 
+.selected-box.xs {
+  height: 28px;
+  padding: 3px 10px;
+}
+
 .selected-box.disabled {
   background: #f5f5f5;
+}
+
+.selected-box .placeholder {
+  font-size: 14px;
+  line-height: 26px;
+  letter-spacing: -0.7px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #aaa;
+  display: none;
 }
 
 .selected-box .item {
@@ -9732,6 +9894,14 @@ table.k-editor .k-editable-area {
 }
 
 .send-form-set {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100% !important;
   padding: 24px 20px;
   background-color: #fff;
   border: 1px solid #ccc;
@@ -13936,6 +14106,10 @@ table.k-editor .k-editable-area {
 * Wrap
 * ------------------------------
 */
+body {
+  overflow: hidden;
+}
+
 .wrap {
   width: 100%;
   min-width: 1920px;
@@ -14180,9 +14354,9 @@ table.k-editor .k-editable-area {
 * ------------------------------
 */
 .quick-menu {
-  position: absolute;
+  position: fixed;
   top: 166px;
-  left: 100%;
+  left: calc(100% - 170px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -14192,7 +14366,6 @@ table.k-editor .k-editable-area {
           flex-direction: column;
   min-width: 140px;
   width: 140px;
-  margin-left: 173px;
   z-index: 100;
 }
 
@@ -14245,6 +14418,12 @@ table.k-editor .k-editable-area {
 
 .quick-menu .foot .k-button {
   height: 32px;
+}
+
+@media (max-width: 1920px) {
+  .quick-menu {
+    left: 1750px;
+  }
 }
 
 /*
